force-app/main/default/objects/Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>1BR</fullName>
                <default>true</default>
                <label>1 Bedroom</label>
            </value>
            <value>
                <fullName>2BR</fullName>
                <label>2 Bedroom</label>
            </value>
            <value>
                <fullName>3BR</fullName>
                <label>3 Bedroom</label>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 